Actualiza control.html

--- a/control.html
+++ b/control.html
@@ -6,7 +6,7 @@
     <title>Control</title>
 </head>
 <body>
-    <h1>Contro No1</h1>
-    <scrip src="logo-blanco.png"></scrip>
+    
+    <scrip src="logo.png"></scrip>
 </body>
 </html>
